syntax = "proto3";

package bytebase.store;

import "google/api/expr/v1alpha1/syntax.proto";

option go_package = "generated-go/store";

message RiskRule {
  string title = 1;
  google.api.expr.v1alpha1.ParsedExpr expression = 2;
  bool active = 3;
}
